propagates unhandled keyboard events back to OS on OSX

This implements new method gdk_display_propagate_native_event
which purpose is to send unhandled native events back to OS so that
default behavior can be triggered.

On OSX this will make bindings like CMD+` (Switch App window) to
work as designed and consistent with native apps.

More details: https://gitlab.gnome.org/GNOME/gtk/-/issues/2914