gdk/gdkdisplay.h
@@ -95,6 +95,9 @@ GDK_AVAILABLE_IN_ALL
 void      gdk_display_put_event  (GdkDisplay     *display,
                                   const GdkEvent *event);
 GDK_AVAILABLE_IN_ALL
+gboolean  gdk_display_propagate_native_event  (GdkDisplay *display,
+                                               GdkEvent *event);
+GDK_AVAILABLE_IN_ALL
 gboolean  gdk_display_has_pending (GdkDisplay  *display);
 
 GDK_AVAILABLE_IN_ALL
